k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: crazydave-service
spec:
  selector:
    name: nginx
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
