k8s/service2.yml
apiVersion: v1
kind: Service
metadata:
  name: crazydave-service2
spec:
  selector:
    name: nginx2
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
