k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: crazydave-ingress
spec:
  rules:
  - host: www.ivansmoot.com
    http:
      paths:
      - path: /
        backend:
          serviceName: crazydave-service
          servicePort: 80
