k8s/ingress2.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: crazydave-ingress2
spec:
  rules:
  - host: www.ivansmoot2.com
    http:
      paths:
      - path: /
        backend:
          serviceName: crazydave-service2
          servicePort: 80
